--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-guarded-routes",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "a guard middleware for react-router v6",
   "keywords": [
     "react",
@@ -39,37 +39,38 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
-    "types-kit": "^0.0.8"
+    "types-kit": "^1.0.1"
   },
   "devDependencies": {
-    "@col0ring/eslint-config": "^0.0.12",
-    "@col0ring/prettier-config": "^0.0.2",
-    "@col0ring/stylelint-config": "^0.0.8",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-angular": "^17.0.3",
-    "@types/jest": "^28.1.6",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@col0ring/eslint-config": "^0.0.14",
+    "@col0ring/prettier-config": "^0.0.3",
+    "@col0ring/stylelint-config": "^0.0.9",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-angular": "^18.6.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-test-renderer": "^18.0.7",
     "cross-env": "^7.0.3",
-    "eslint": "^8.20.0",
-    "husky": "^8.0.1",
-    "jest": "^28.1.3",
-    "lint-staged": "^13.0.3",
+    "eslint": "^8.56.0",
+    "husky": "^9.0.10",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.0.0",
-    "react-router": "^6.3.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.22.0",
     "react-test-renderer": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "stylelint": "^14.9.1",
-    "ts-jest": "^28.0.7",
-    "tsup": "^6.2.1",
-    "typescript": "^4.7.4"
+    "rimraf": "^5.0.5",
+    "stylelint": "^16.2.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "react": ">=17.0.0",
-    "react-router": "^6.0.0"
+    "react-router": "^6.22.0"
   }
 }
